added difficulty buttons and their functionality

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -2,12 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8"></script>
         <script src="js/main.js" charset="utf-8"></script>
         <link rel="stylesheet" href="css/style.css">
+        <title>Space Rangers</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1><b>Space Rangers</b></h1>
+        <div class="difficulty">
+            <div class="row">
+                <h1>Select Your Assignment</h1>
+            </div>
+            <div class="row">
+                <button class="easy">Defend Outer Worlds (3 enemies)</button>
+                <button class="medium">Defend Inner Worlds (6 enemies)</button>
+                <button class="hard">Defend Homeworld (10 enemies)</button>
+            </div>
+        </div>
     </body>
 </html>
