difficulty buttons work and dissapear on click

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -14,9 +14,9 @@
                 <h2>Select Your Assignment</h2>
             </div>
             <div class="row">
-                <button class="easy">Defend Outer Worlds (3 enemies)</button>
-                <button class="medium">Defend Inner Worlds (6 enemies)</button>
-                <button class="hard">Defend Homeworld (10 enemies)</button>
+                <button class="easy" onclick="EventHandlers.makeEnemies(3)">Defend Outer Worlds (3 enemies)</button>
+                <button class="medium" onclick="EventHandlers.makeEnemies(6)">Defend Inner Worlds (6 enemies)</button>
+                <button class="hard" onclick="EventHandlers.makeEnemies(10)">Defend Homeworld (10 enemies)</button>
             </div>
         </div>
     </body>
