Player ship name will appear after difficulty selected

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -19,5 +19,10 @@
                 <button class="hard" onclick="EventHandlers.makeEnemies(10)">Defend Homeworld (10 enemies)</button>
             </div>
         </div>
+        <div class="game-canvas">
+            <div class="collum">
+                <h3 class="player-ship"></h3>
+            </div>
+        </div>
     </body>
 </html>
