added form to add player ship title

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -19,6 +19,12 @@
                 <button class="hard" onclick="EventHandlers.makeEnemies(10)">Defend Homeworld (10 enemies)</button>
             </div>
         </div>
+        <div class="shipname">
+            <form>
+                <input type="text" placeholder="Enter your ship name" class="namebox"/>
+                <button type="submit">REGISTER SHIP</button>
+            </form>
+        </div>
         <div class="game-canvas">
             <div class="collum">
                 <h3 class="player-ship"></h3>
