hull now shows onscreen

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -26,8 +26,13 @@
             </form>
         </div>
         <div class="game-canvas">
-            <div class="collum">
-                <h3 class="player-ship"></h3>
+            <div class="row">
+                <div class="collum">
+                    <h3 id="player-ship"></h3>
+                    <h5 id="hull"></h5>
+                    <h5 id="firepower"></h5>
+                    <h5 id="accuracy"></h5>
+                </div>
             </div>
         </div>
     </body>
