divided player info and enemy info in css

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -26,12 +26,17 @@
             </form>
         </div>
         <div class="game-canvas">
-            <div class="row">
+            <div class="row" id="row1">
                 <div class="collum">
                     <h3 id="player-ship"></h3>
                     <h5 id="hull"></h5>
                     <h5 id="firepower"></h5>
                     <h5 id="accuracy"></h5>
+                </div>
+            </div>
+            <div class="row" id="row2">
+                <div class="collum">
+                    <h3>Enemy Fleet</h3>
                 </div>
             </div>
         </div>
