alien factory now makes a div for each alien ship

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -38,6 +38,8 @@
                 <div class="collum">
                     <h3>Enemy Fleet</h3>
                 </div>
+                <div class="enemyFleet">
+                </div>
             </div>
         </div>
     </body>
