enemy ship divs now display their hull strength as text

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="game-canvas">
             <div class="row" id="row1">
-                <div class="collum">
+                <div class="column">
                     <h3 id="player-ship"></h3>
                     <h5 id="hull"></h5>
                     <h5 id="firepower"></h5>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="row" id="row2">
-                <div class="collum">
+                <div class="columm">
                     <h3>Enemy Fleet</h3>
                 </div>
                 <div class="enemyFleet">
