added background, changed the text color for better visibility, and added a Player Ship picture

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -1,3 +1,5 @@
+<!-- images sourced from: 
+depositphotos.com-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -28,6 +30,7 @@
         <div class="game-canvas">
             <div class="row" id="row1">
                 <div class="column">
+                    <img src="images/playership.PNG" class="player-ship">
                     <h3 id="player-ship"></h3>
                     <h5 id="hull"></h5>
                     <h5 id="firepower"></h5>
@@ -35,10 +38,9 @@
                 </div>
             </div>
             <div class="row" id="row2">
+                <div class="enemyFleet"></div>
                 <div class="columm">
                     <h3>Enemy Fleet</h3>
-                </div>
-                <div class="enemyFleet">
                 </div>
             </div>
         </div>
