added the base modals for introduction and how to play.  Also added more sound effects

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -10,7 +10,24 @@ depositphotos.com-->
         <title>Space Rangers</title>
     </head>
     <body>
-        <h1><b>Space Rangers</b></h1>
+        <div id="intro">
+            <div id="introtext">
+                <h1><b>Welcome to the Space Rangers!</b></h1>
+                <p>This is your introductory to the world of Space
+                    Rangers!
+                </p>
+                <a id="closeintro" href="#">Close</a>
+            </div>
+        </div>
+        <button id="openModal1">How To Play</button>
+        <div id="modal1">
+            <div id="modal1text">
+                <h1>How To Play Space Rangers</h1>
+                <p>This is how you play Space Rangers</p>
+                <a id="close" href="#">Close</a>
+            </div>
+        </div>
+        <div class='title'><h1><b>Space Rangers</b></h1></div>
         <div class="difficulty">
             <div class="diff1">
                 <h2>Select Your Assignment</h2>
