added flavor text to the introduction module, and reorganized some sound effects

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -13,10 +13,21 @@ depositphotos.com-->
         <div id="intro">
             <div id="introtext">
                 <h1><b>Welcome to the Space Rangers!</b></h1>
-                <p>This is your introductory to the world of Space
-                    Rangers!
+                <p>Welcome aboard, Captain!  You just became part of the newest addition to Earths Space Fleet:
+                    The Space Ranger Corp.  Our mission is to protect Earth and all of our colonies spread out
+                    amongst the stars.
                 </p>
-                <a id="closeintro" href="#">Close</a>
+                <p>Our primary duties will be fighting and destroying rogue fleets of Pirates.  They're known
+                    to operate mostly in the Outer Edge, where the most defenseless colony planets tend
+                    to be.  But they have been known to make their way far into Earth space.  And the closer they
+                    get to Earth, the bigger the raiding parties tend to be.
+                </p>
+                <p>As our newest captain, your first task will be to pick your assignment.  After that, we will
+                    be granting you the exclusive privilege of naming our newest Battle Cruiser.  You will, of course,
+                    be piloting this ship for the duration of the assignment.
+                </p>
+                <p>Godspeed, Captain.  The safety of humanity is entrusted to you.</p>
+                <a class="modalbutton" id="closeintro" href="#">Close</a>
             </div>
         </div>
         <button id="openModal1">How To Play</button>
@@ -24,7 +35,7 @@ depositphotos.com-->
             <div id="modal1text">
                 <h1>How To Play Space Rangers</h1>
                 <p>This is how you play Space Rangers</p>
-                <a id="close" href="#">Close</a>
+                <a class="modalbutton" id="close" href="#">Close</a>
             </div>
         </div>
         <div class='title'><h1><b>Space Rangers</b></h1></div>
