fixed bug where player could not lose if below 0 hp

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -39,6 +39,7 @@ depositphotos.com-->
             </div>
         </div>
         <div class='title'><h1><b>Space Rangers</b></h1></div>
+        <div class="infobox"><h4 class="info"></h4></div>
         <div class="difficulty">
             <div class="diff1">
                 <h2>Select Your Assignment</h2>
