re-added the Flee function and added the button to open the prompt

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -57,6 +57,9 @@ depositphotos.com-->
             </form>
         </div>
         <div class="game-canvas">
+            <div>
+            <button class="fleebattle">Flee</button>
+            </div>
             <div class="row" id="row1">
                 <div class="column">
                     <img src="images/playership.PNG" class="player-ship">
