Re-added the repairHull function and assigned it to a button

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -67,6 +67,7 @@ depositphotos.com-->
                     <h5 id="hull"></h5>
                     <h5 id="firepower"></h5>
                     <h5 id="accuracy"></h5>
+                    <button id="repair">Repair Hull</button>
                 </div>
             </div>
             <div class="row" id="row2">
