re-classed the Flee, How to Play, and Repair Hull buttons, and added styling

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -30,7 +30,7 @@ depositphotos.com-->
                 <a class="modalbutton" id="closeintro" href="#">Close</a>
             </div>
         </div>
-        <button id="openModal1">How To Play</button>
+        <button class="openModal1" id="button">How To Play</button>
         <div id="modal1">
             <div id="modal1text">
                 <h1>How To Play Space Rangers</h1>
@@ -58,7 +58,7 @@ depositphotos.com-->
         </div>
         <div class="game-canvas">
             <div>
-            <button class="fleebattle">Flee</button>
+            <button class="fleebattle" id="button">Flee</button>
             </div>
             <div class="row" id="row1">
                 <div class="column">
@@ -67,7 +67,7 @@ depositphotos.com-->
                     <h5 id="hull"></h5>
                     <h5 id="firepower"></h5>
                     <h5 id="accuracy"></h5>
-                    <button id="repair">Repair Hull</button>
+                    <button class="repair" id="button">Repair Hull</button>
                 </div>
             </div>
             <div class="row" id="row2">
