added modal for end screen messages with replay and close buttons

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -38,6 +38,14 @@ depositphotos.com-->
                 <a class="modalbutton" id="close" href="#">Close</a>
             </div>
         </div>
+        <div id="endModal">
+            <div id="endModalText">
+                <h1 id="endHeader"></h1>
+                <p id="endMessage"></p>
+                <a class="modalbutton" id="refresh" href="#">Replay?</a>
+                <a class="modalbutton" id="closeEnd" href="#">Close</a>
+            </div>
+        </div>
         <div class='title'><h1><b>Space Rangers</b></h1></div>
         <div class="infobox"><h4 class="info"></h4></div>
         <div class="difficulty">
