added text to the How to Play module

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -27,14 +27,39 @@ depositphotos.com-->
                     be piloting this ship for the duration of the assignment.
                 </p>
                 <p>Godspeed, Captain.  The safety of humanity is entrusted to you.</p>
-                <a class="modalbutton" id="closeintro" href="#">Close</a>
+                <a class="modalbutton" id="closeintro" href="#">Get Started</a>
             </div>
         </div>
         <button class="openModal1" id="button">How To Play</button>
         <div id="modal1">
             <div id="modal1text">
                 <h1>How To Play Space Rangers</h1>
-                <p>This is how you play Space Rangers</p>
+                <p>In Space Rangers, you are in control of a starship, and do battle with enemy pirate ships.
+                    The different assignments you can take will scale the difficulty by spawning in more enemies.
+                </p>
+                <h5>Combat</h5>
+                <p>Once you name your ship, you will see the battlefield.  The enemy ships are all grouped
+                    together on the right side of the screen, while your ship is represented on the left.  Your
+                    ships stats are listed as well.
+                </p>
+                <p>To fight the pirates, just click on one of the enemy ships.  Once you click, the battle
+                    will start.  The player will always attack first.  If your shot lands, you will damage
+                    the enemy.  If they take enough damage to be destroyed, then their ship will dissapear,
+                    and you get another turn.  If the enemy ship survives the damage, or your shot misses,
+                    then they will have the chance to attack you in retaliation.
+                </p>
+                <h5>Running and Sticking It Out</h5>
+                <p>As the player, you might find out that you are dangerously low on health.  You will have two
+                    options.  The first one is to repair your shields.  If you click the Repair Hull button, then 
+                    your loyal crew will work hard to add 5 points to your hull.  But be warned, you can only repair 
+                    three times before you work them ragged.
+                    <br>
+                    Your second option is to flee.  If you click the Flee button, a prompt will appear, giving you 
+                    the option to escape the battle.  You will lose the game, but you will live on to fight another 
+                    day.
+
+                </p>
+
                 <a class="modalbutton" id="close" href="#">Close</a>
             </div>
         </div>
