added a limit to the uses of Repair Hull

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -51,8 +51,8 @@ depositphotos.com-->
                 <h5>Running and Sticking It Out</h5>
                 <p>As the player, you might find out that you are dangerously low on health.  You will have two
                     options.  The first one is to repair your shields.  If you click the Repair Hull button, then 
-                    your loyal crew will work hard to add 5 points to your hull.  But be warned, you can only repair 
-                    three times before you work them ragged.
+                    your loyal crew will work hard to add 3 points to your hull.  But be warned, you can only repair 
+                    three times before you work your crew ragged.
                     <br>
                     Your second option is to flee.  If you click the Flee button, a prompt will appear, giving you 
                     the option to escape the battle.  You will lose the game, but you will live on to fight another 
