added background music that starts on game start, and can be stopped with a button

--- a/space-rangers-app/index.html
+++ b/space-rangers-app/index.html
@@ -92,6 +92,7 @@ depositphotos.com-->
         <div class="game-canvas">
             <div>
             <button class="fleebattle" id="button">Flee</button>
+            <button class="mute" id="button">Stop Music</button>
             </div>
             <div class="row" id="row1">
                 <div class="column">
